--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "peekaboo-toggle",
   "version": "1.0.0",
   "description": "A jQuery plugin for accessible content toggles.",
-  "main": "jquery.peekaboo.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "mkdir -p lib && babel src -d lib",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +26,9 @@
   "homepage": "https://github.com/nadavspi/peekaboo.js#readme",
   "dependencies": {
     "jquery": ">= 1.8.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-preset-es2015": "^6.5.0"
   }
 }
