--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "mkdir -p lib && babel src -d lib",
     "prepublish": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js src/index.test.js -w"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
-    "babel-preset-es2015": "^6.5.0"
+    "babel-preset-es2015": "^6.5.0",
+    "chai": "^3.5.0",
+    "jsdom": "^8.0.4",
+    "mocha": "^2.4.5"
   }
 }
